2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (continue_dumps): Fix deadlock if holding disk
	  fill up when in degraded mode.

2004-04-23  Eric Siegerman <eric_97@pobox.com>

	Bug fix: amflush would run, and consume a tape, even if there
	were no Amanda directories waiting to be flushed:
	* common-src/sl.c (is_empty_sl): New function to test
	  whether a list is empty.
	* common-src/sl.h (is_empty_sl): Prototype.
	* server-src/amflush.sh (main): Use is_empty_sl(),
	  rather than ==NULL, to test emptiness of datestamp_list.

2004-04-23  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (setup_estimate): Typo.

2004-04-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Allow bumpsize, bumppercent, bumpdays and bumpmult to be in a dumptype.
	* server-src/conffile.c: Parse.
	* server-src/conffile.h: Define.
	* server-src/amadmin.c (disklist_one): Use.
	* server-src/diskfile.c (read_diskline): Initialize.
	* server-src/diskfile.h: Define.
	* server-src/planner.c: Use.
	* man/amanda.8.in: Document.
	* NEWS: bumpsize, bumppercent, bumpdays and bumpmult can be in a
	  dumptype.

2004-04-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Fix by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/planner.c (setup_estimate): Only ask for level 0 estimate
	  if strategy is noinc.

2004-04-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Documentation from Paul Bijnens <paul.bijnens@xplanation.com>

	* man/amoverview.8.in: Document results.

2004-04-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/amoverview.pl.in: Print last two characters.

2004-04-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-disk.sh.in: Fix for sh compatibility.

2004-04-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Fix by John Koyle <jkoyle@rfpdepot.com>

	* common-src/protocol.c: Fix EAGAIN on Linux.
