@@ -1,3 +1,7 @@
+2004-04-26  Marc Mengel <mengel@fnal.gov>
+
+	* tape-src/output-rait.c: Verify reads correctly.
+
 2004-04-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* server-src/driver.c (continue_dumps): Fix deadlock if holding disk
